--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,10 @@ repositories {
 }
 
 dependencies {
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.jboss.logging:jboss-logging:3.5.3.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.postgresql:postgresql:42.7.2'
-    implementation 'org.telegram:telegrambots:6.9.0'
-    implementation 'com.github.EvgeniiSiniuk:tg-inline-calendar:1.0.0'
     implementation 'org.apache.poi:poi-ooxml:5.4.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     compileOnly 'org.projectlombok:lombok'
