--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,50 +6,36 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       # 1. Repozitoriyani yuklash
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Java 19 o‘rnatish
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          java-version: '19'
-          distribution: 'temurin'
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 3. Loyihani build qilish (testlarsiz)
-      - name: Build with Gradle
+      - name: Copy project to server and deploy
+        env:
+          SERVER_USER: "root"
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          PROJECT_DIR: "/root/bron"
         run: |
-          chmod +x gradlew
-          ./gradlew clean build -x test
-
-      # 4. Docker Hub'ga login
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      # 5. Docker image build va push
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/tezbron:latest .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tezbron:latest
-
-      # 6. Serverga SSH orqali ulanib, deploy qilish
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /root/bron
-            docker compose down || true
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/tezbron:latest
-            docker compose up -d
-            docker system prune -af
+          # Copy project
+          # Run deployment commands with debugging
+          ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
+          cd $PROJECT_DIR &&
+          ls -la &&
+          java -version &&
+          export PATH=/opt/apache-maven/bin:$PATH &&
+          mvn -version &&
+          mvn clean package -DskipTests &&
+          docker --version &&
+          docker compose version &&
+          docker compose up --build -d &&
+          docker builder prune -af &&
+          docker image prune -af
+          "
