--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: bron
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://dbbron:5432/dbbron
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://dbquiz:5432/dbquiz
       - TZ=Asia/Tashkent
     ports:
       - "5002:8080"
