--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,55 @@
-name: Auto Deploy TezBron
+name: Deploy Bron App
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. Repozitoriyani yuklash
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: Set up JDK 19
+        uses: actions/setup-java@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          java-version: '19'
+          distribution: 'temurin'
 
-      - name: Copy project to server and deploy
-        env:
-          SERVER_USER: "root"
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          PROJECT_DIR: "/root/bron"
+      - name: Build with Gradle
         run: |
-          # Copy project
-          # Run deployment commands with debugging
-          ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
-          cd $PROJECT_DIR &&
-          ls -la &&
-          java -version &&
-          export PATH=/opt/apache-maven/bin:$PATH &&
-          mvn -version &&
-          mvn clean package -DskipTests &&
-          docker --version &&
-          docker compose version &&
-          docker compose up --build -d &&
-          docker builder prune -af &&
-          docker image prune -af
-          "
+          chmod +x gradlew
+          ./gradlew clean build
+
+      - name: Build Docker image
+        run: docker build -t bron-app .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Push Docker image
+        run: |
+          docker tag bron-app ${{ secrets.DOCKER_HUB_USERNAME }}/bron-app:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/bron-app:latest
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /root/bron
+            export DB_USERNAME=${{ secrets.DB_USERNAME }}
+            export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            export TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
+            export DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/bron-app:latest
+            docker stop bron || true
+            docker rm bron || true
+            docker-compose up -d
