--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://83.222.19.225:9000/dbquiz
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.maximum-pool-size=10
@@ -14,12 +14,16 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
 springdoc.api-docs.path=/v3/api-docs
+
 springdoc.swagger-ui.path=/swagger-ui.html
 
-telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.bot.token=7603315344:AAGaPlx2dGL8EwdRZIboxNBSMsgUOtrYl1Q
 server.port=8080
+
