--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
 version: '3'
 services:
   app-bron:
-    image: bron-app:latest  # Docker Hub'dan pull qilinadi
+    build: .
     container_name: bron
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://dbquiz:5432/dbbron
-      - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
       - TZ=Asia/Tashkent
     ports:
       - "5002:8080"
+
     restart: always
+
     networks:
       - log
-    depends_on:
-      - dbquiz
+
+volumes:
+  pgdata_bron:
 
 networks:
   log:
