--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,63 @@
-name: Auto Deploy TezBron
+name: 🚀 Auto Deploy to VPS
 
 on:
   push:
     branches:
-      - master
+      - main  # faqat main branch push bo‘lganda ishga tushadi
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      # 1. Repozitoriyani yuklash
+      # === 1. Repositoryni olish ===
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      # === 2. Java versiyasini o‘rnatish ===
+      - name: Set up JDK 19
+        uses: actions/setup-java@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          java-version: '19'
+          distribution: 'temurin'
 
-      - name: Copy project to server and deploy
-        env:
-          SERVER_USER: "root"
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          PROJECT_DIR: "/root/bron"
+      # === 3. Projectni build qilish (Gradle bilan) ===
+      - name: Build project
+        run: ./gradlew clean build -x test
+
+      # === 4. Docker Hub login ===
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # === 5. Docker image yaratish ===
+      - name: Build Docker image
         run: |
-          # Copy project
-          # Run deployment commands with debugging
-          ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
-          cd $PROJECT_DIR &&
-          ls -la &&
-          java -version &&
-          export PATH=/opt/apache-maven/bin:$PATH &&
-          mvn -version &&
-          mvn clean package -DskipTests &&
-          docker --version &&
-          docker compose version &&
-          docker compose up --build -d &&
-          docker builder prune -af &&
-          docker image prune -af
-          "
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/bron-app:latest .
+
+      # === 6. Docker image’ni push qilish ===
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/bron-app:latest
+
+      # === 7. VPS serverga deploy qilish ===
+      - name: Deploy to VPS via SSH
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /root/bron
+
+            docker compose down
+
+            echo "⬇️ Pulling new image from Docker Hub..."
+            docker pull ${{ secrets.DOCKER_USERNAME }}/bron-app:latest
+
+            echo "🚀 Starting new containers..."
+            docker compose up -d --build
+
+            echo "✅ Deployment completed successfully!"
