--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
 version: '3'
 services:
   app-bron:
-    build: .
+    image: ${DOCKER_HUB_USERNAME}/bron-app:latest
     container_name: bron
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://dbquiz:5432/dbbron
       - TZ=Asia/Tashkent
     ports:
       - "5002:8080"
-
     restart: always
-
     networks:
       - log
-
-volumes:
-  pgdata_bron:
+    depends_on:
+      - dbquiz
 
 networks:
   log:
