--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/quiz
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# Production PostgreSQL (Docker ichidagi konteyner)
+spring.datasource.url=jdbc:postgresql://dbquiz:5432/dbbron
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.maximum-pool-size=10
@@ -8,21 +9,19 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.hibernate.ddl-auto=update
-
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-
 springdoc.api-docs.path=/v3/api-docs
-
 springdoc.swagger-ui.path=/swagger-ui.html
 
-telegram.bot.token=8435324567:AAFXqE8WGcEKiFZKQj_uRonUqJECFlLcA9k
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
 server.port=8080
