--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,29 +1,29 @@
-spring.datasource.url=jdbc:postgresql://83.222.19.225:9000/dbquiz
+# Local PostgreSQL (local mashinada test uchun)
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbbron
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection pool
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.hibernate.ddl-auto=update
-
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-
 springdoc.api-docs.path=/v3/api-docs
-
 springdoc.swagger-ui.path=/swagger-ui.html
 
-telegram.bot.token=7603315344:AAGaPlx2dGL8EwdRZIboxNBSMsgUOtrYl1Q
+telegram.bot.token=YOUR_LOCAL_BOT_TOKEN
 server.port=8080
 
+spring.application.name=bron
