--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,24 +4,33 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection pool configuration
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
+# Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+# Multipart (file upload) limits
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# Swagger (productionda faqat kerak bo?lsa)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+# Telegram bot token environment orqali
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
 
+# Port (Docker ichida)
 server.port=8080
+
+# Application name
+spring.application.name=bron
