--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,18 +29,18 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME}}
+          password: ${{ secrets.DOCKER_HUB_TOKEN}}
 
       # === 5. Docker image yaratish ===
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/bron-app:latest .
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME}}/bron-app:latest .
 
       # === 6. Docker image’ni push qilish ===
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/bron-app:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME}}/bron-app:latest
 
       # === 7. VPS serverga deploy qilish ===
       - name: Deploy to VPS via SSH
@@ -54,7 +54,7 @@ jobs:
 
             docker compose down
 
-            docker pull ${{ secrets.DOCKER_USERNAME }}/bron-app:latest
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME}}/bron-app:latest
 
             echo "🚀 Starting new containers..."
             docker compose up -d --build
