--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 # Local PostgreSQL (local mashinada test uchun)
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbbron
+spring.datasource.url=jdbc:postgresql://83.222.19.225:9000/dbquiz
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -23,7 +23,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-telegram.bot.token=YOUR_LOCAL_BOT_TOKEN
+telegram.bot.token=TELEGRAM_BOT_TOKEN
 server.port=8080
 
 spring.application.name=bron
