--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,13 @@
 version: "3.9"
 
 services:
-  dbquiz:
-    image: postgres:16
-    container_name: dbquiz
-    restart: always
-    environment:
-      POSTGRES_DB: dbbron
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata_bron:/var/lib/postgresql/data
-    networks:
-      - log
-
   app-bron:
     build: .
     image: bron-app:latest
     container_name: bron
-    depends_on:
-      - dbquiz
     environment:
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       TZ: Asia/Tashkent
     ports:
@@ -35,6 +18,7 @@ services:
 
 volumes:
   pgdata_bron:
+    external: true
 
 networks:
   log:
