--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,43 @@
-name: 🚀 Auto Deploy to VPS
+name: Deploy to Server
 
 on:
   push:
     branches:
-      - master  # faqat master branch push bo‘lganda ishga tushadi
-
+      - master
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # === 1. Repositoryni olish ===
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      # === 2. Java versiyasini o‘rnatish ===
-      - name: Set up JDK 19
-        uses: actions/setup-java@v4
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          java-version: '19'
-          distribution: 'temurin'
+          ssh-private-key: ${{secrets.SSH_PRIVATE_KEY}}
 
-      # === 3. Gradle build uchun ruxsat ===
-      - name: Grant execute permission for Gradle
-        run: chmod +x ./gradlew
+      - name: Copy project to server and deploy
+        env:
+          SERVER_USER: ${{secrets.SERVER_USERNAME}}
+          SERVER_IP: ${{secrets.SERVER_IP}}
+          PROJECT_DIR: "/root/bron"
+        run: |
+          # Copy project
+          
+          rsync -avz -e "ssh -p 22 -o StrictHostKeyChecking=no" . $SERVER_USER@$SERVER_IP:$PROJECT_DIR
 
-      # === 4. Projectni build qilish ===
-      - name: Build project (Gradle)
-        run: ./gradlew clean build -x test
+          # Run deployment commands with debugging
+          ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
+          cd $PROJECT_DIR &&
+          ls -la &&
+          java -version &&
+          export PATH=/opt/apache-maven/bin:$PATH &&
+          mvn -version &&
+          mvn clean package -DskipTests &&
+          docker --version &&
+          docker compose version &&
+          docker compose up --build -d &&
+          docker builder prune -af &&
+          docker image prune -af
+          "
 
-      # === 5. Docker Hub login ===
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{secrets.DOCKER_HUB_USERNAME}}
-          password: ${{secrets.DOCKER_HUB_TOKEN}}
-
-      # === 6. Docker image yaratish ===
-      - name: Build Docker image
-        run: docker build -t ${{secrets.DOCKER_HUB_USERNAME}}/bron-app:latest .
-
-      # === 7. Docker image’ni push qilish ===
-      - name: Push Docker image to Docker Hub
-        run: docker push ${{secrets.DOCKER_HUB_USERNAME}}/bron-app:latest
-
-      # === 8. VPS serverga deploy qilish ===
-      - name: Deploy to VPS via SSH
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{secrets.SERVER_IP}}
-          username: ${{secrets.SERVER_USERNAME}}
-          key: ${{secrets.SSH_PRIVATE_KEY}}
-          script: |
-            cd /root/bron
-
-            echo "🧹 Stopping old containers..."
-            docker compose down
-
-            echo "📦 Pulling new image..."
-            docker pull ${{secrets.DOCKER_HUB_USERNAME}}/bron-app:latest
-
-            echo "🚀 Starting new containers..."
-            docker compose up -d --build
-
-            echo "✅ Deployment completed successfully!"
