--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
           PROJECT_DIR: "/root/bron"
         run: |
           # === Copy project to server ===
-          rsync -avz --exclude '.git' --exclude '.github' --exclude 'build' 
-           -e "ssh -p 22 -o StrictHostKeyChecking=no" . $SERVER_USER@$SERVER_IP:$PROJECT_DIR
+          rsync -avz -e "ssh -p 22 -o StrictHostKeyChecking=no" . $SERVER_USER@$SERVER_IP:$PROJECT_DIR
 
           # === Run deployment commands ===
           ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
