--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,18 +29,14 @@ jobs:
 
           # === Run deployment commands ===
           ssh -p 22 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
+            set -e  # xatolik bo‘lsa, to‘xtasin
             cd $PROJECT_DIR &&
             ls -la &&
             java -version &&
-            gradle -v || ./gradlew -v &&
 
-            # === Build project with Gradle ===
-            if [ -f ./gradlew ]; then
-              chmod +x ./gradlew
-              ./gradlew clean build -x test
-            else
-              gradle clean build -x test
-            fi &&
+            # === Build project with Gradle Wrapper ===
+            chmod +x ./gradlew
+            ./gradlew clean build --no-daemon -x test &&
 
             # === Deploy with Docker ===
             docker --version &&
