--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+# ==========
+# Common config
+# ==========
 spring.application.name=bron
+server.port=8080
+
+# Default profile (agar hech narsa ko?rsatilmasa)
+spring.profiles.active=local
+
+# Timezone
+spring.jackson.time-zone=Asia/Tashkent
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.example.bron=INFO
+
+# JPA umumiy sozlamalar
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ==========
+# Swagger / OpenAPI config
+# ==========
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
