--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,16 @@ spring.jpa.show-sql=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# === Eskiz konfiguratsiyasi ===
+eskiz.base-url=https://notify.eskiz.uz/api
+eskiz.email=yangilari.uz@mail.ru
+eskiz.password=bERxD5aYgXVkwjrLLECEdLgHSYgLRaAtC3uqRKvu
+eskiz.sender=4546
+eskiz.token-expire-hours=23
+# Cache turi
+spring.cache.type=redis
+
+# OTP max urinishlar
+otp.max-attempts=3
+
