--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Logging local uchun kengroq
 logging.level.root=INFO
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=6000
