--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,6 @@ logging.level.org.springframework.web=INFO
 
 # Agar kerak bo?lsa CORS yoki boshqa prod parametrlar
 server.error.include-message=never
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+spring.data.redis.timeout=6000
