--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,6 +4,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+feign-client-url.bron=http://localhost:8080
 
 # Optional: agar SSL ishlatilmasa
 spring.datasource.driver-class-name=org.postgresql.Driver
